RESOLVED FIXED216810
Crashtracer inside PDFPlugin::createScrollbar.
https://bugs.webkit.org/show_bug.cgi?id=216810
Summary Crashtracer inside PDFPlugin::createScrollbar.
Brady Eidson
Reported 2020-09-21 17:06:21 PDT
Crashtracer inside PDFPlugin::createScrollbar. Yet again after https://trac.webkit.org/changeset/266756/webkit We know more this time: A PDFPlugin might try to install a PDFDocument after the plugin owner element has been destroyed.
Attachments
Patch (1.83 KB, patch)
2020-09-21 17:10 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2020-09-21 17:06:42 PDT
Brady Eidson
Comment 2 2020-09-21 17:10:40 PDT
EWS
Comment 3 2020-09-22 09:22:37 PDT
Committed r267412: <https://trac.webkit.org/changeset/267412> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409333 [details].
Note You need to log in before you can comment on or make changes to this bug.